--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
-   
+   <link rel="stylesheet" href="./css/bootstrap-rtl.min.css">
+   <link rel="stylesheet" href="css/font-awesome.min.css">
     <title>React App</title>
   </head>
   <body>
